Start game when up arrow is pressed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Phaser Example Runner</title>
+  <title>Wappumato</title>
   <meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui">
   <script src="phaser.min.js" type="text/javascript"></script>
   <script src="snake.js" type="text/javascript"></script>
@@ -18,7 +18,7 @@
   <style type="text/css"></style>
 </head>
 <body>
-  <div id="phaser-example">
+  <div id="wappumato">
   </div>
 </body>
 </html>
