--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <title>Wappumato</title>
   <meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui">
+  <script src="https://cdn.firebase.com/js/client/2.2.3/firebase.js"></script>
   <script src="phaser.min.js" type="text/javascript"></script>
   <script src="snake.js" type="text/javascript"></script>
   <style>
